--- a/stopper.html
+++ b/stopper.html
@@ -2,5 +2,7 @@
     <script src="stopper.js"></script>
   </head>
   <body>
-  Teszt
+    Teszt
+  <a id="ido">00:00:00</a>
+  <button onclick="create()"> Start </button>
   </body>
