--- a/stopper.html
+++ b/stopper.html
@@ -1,8 +1,15 @@
 <head>
     <script src="stopper.js"></script>
-  </head>
-  <body>
+</head>
+<body>
     Teszt
-  <a id="ido">00:00:00</a>
-  <button onclick="create()"> Start </button>
-  </body>
+  <div id = "main">
+    <a id="ido">00:00:00</a>
+
+    <div id="controls">
+      <button onclick="create()">Start</button>
+
+    </div>
+    
+  </div>
+</body>
