Pontosabb mérés, flag-elés

--- a/stopper.html
+++ b/stopper.html
@@ -5,11 +5,13 @@
     Teszt
   <div id = "main">
     <a id="ido">00:00:00</a>
+    
 
     <div id="controls">
       <button onclick="create()">Start</button>
 
     </div>
+    <div id = "saves" style="height:400px;width:300px;overflow:auto;border:6px solid blue;padding:2%"> </div>
     
   </div>
 </body>
