Legacy verzió és új CSS
A -legacy verzió ECMAS 5-re átírt verziója az eredetinek

--- a/stopper-legacy.html
+++ b/stopper-legacy.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title> Stopper óra </title>
-  <script src="stopper.js"></script>
+  <script src="stopper-legacy.js"></script>
   <link rel="stylesheet" href="stopper.css">
 </head>
 <body>
